# mizu-navigator

./: .gitignore  Cargo.toml  MANIFESTO.md  README.md  ROADMAP.md  SECURITY-INVARIANTS.md
.github/workflows/: kani.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  messages.rs
crates/core/src/core/: config.rs  errors.rs  mod.rs  storage.rs
crates/core/src/core/types/: eval.rs  interner.rs  store.rs  tests.rs  value.rs
crates/core/src/parser/: flow.rs  layout.rs  logic_worker.rs  mod.rs  splitter.rs  style.rs  typecheck.rs
crates/core/src/parser/logic/: ast.rs  eval.rs  lexer.rs  mod.rs  parse.rs  purity.rs  tests.rs
docs/design/: bidi.md  responsive.md  types.md
docs/reference/: grammar.md  semantics.md
docs/reference/examples/: 01_minimal.mizu  02_logic_basics.mizu  03_counter.mizu  04_urls_fetch.mizu  05_comp.mizu  06_each.mizu  07_timer.mizu  08_style.mizu  err_absolute_img_src.mizu  err_nested_each.mizu  err_recursion.mizu  showcase.mizu
docs/tutorial/: index.md
formal/: Differential.lean  FIDELITY.md  MizuFormal.lean  RESULTS.md  lake-manifest.json  lakefile.toml
formal/MizuFormal/: Budget.lean  Flow.lean  Layout.lean  NonInterference.lean  Semantics.lean  Syntax.lean  Types.lean
src/: lib.rs  main.rs
src/core/: config.rs  errors.rs  mod.rs  storage.rs  types.rs
src/core/types/: eval.rs  interner.rs  mod.rs  tests.rs
src/network/: messages.rs  mod.rs  opennic.rs  uri.rs  vault.rs  worker.rs
src/network/worker/: auth.rs  fetch.rs  h3_pool.rs  mod.rs  storage_debounce.rs  tests.rs  tests_backpressure.rs  tests_insecure_dev.rs  tls.rs
src/parser/: flow.rs  layout.rs  logic.rs  logic_worker.rs  mod.rs  splitter.rs  style.rs  typecheck.rs  urls.rs
src/parser/logic/: ast.rs  comp.rs  eval.rs  lexer.rs  parse.rs  tests.rs
src/render/: accessibility.rs  bidi.rs  chrome_vello.rs  hit_test.rs  image_codec.rs  layout_bridge.rs  mod.rs  navigation.rs  preferences.rs  responsive.rs  security.rs  text_engine.rs  vello_pipeline.rs  window.rs
src/render/inspector/: log.rs  mod.rs  model.rs  paint.rs
src/render/window/: event_loop.rs  focus.rs  history.rs  input.rs  manager.rs  mod.rs  navigate.rs  tests.rs
tests/: reference_examples.rs  storage_rehydration_taint.rs
