[package]
name = "mizu-core"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
thiserror = "2"
nom = "7.1.3"
tracing = "0.1.44"
taffy = "0.5"
ego-tree = "0.10"
rustc-hash = "2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = { version = "0.8", features = ["parse"] }
aes-gcm = "0.10"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
keyring = "3.6.2"
redb = "2.1"
hkdf = "0.12"
zeroize = "1"
hickory-resolver = { version = "0.24", default-features = false }
